--- a/DreamFactory.AddressBok/Web.Release.config
+++ b/DreamFactory.AddressBok/Web.Release.config
@@ -15,7 +15,9 @@
     </connectionStrings>
   -->
   <system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <customErrors defaultRedirect="~/Shared/Error" mode="On" xdt:Transform="Insert" />
+    <compilation targetFramework="4.5"  xdt:Transform="Replace"/>
+    <httpRuntime targetFramework="4.5"  xdt:Transform="Replace"/>
     <!--
       In the example below, the "Replace" transform will replace the entire
       <customErrors> section of your Web.config file.
