--- a/DreamFactory.AddressBok/DreamFactory.AddressBook.csproj
+++ b/DreamFactory.AddressBok/DreamFactory.AddressBook.csproj
@@ -165,14 +165,14 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ContactContactGroupViewModel.cs" />
-    <Compile Include="Models\Contact\ContactContactGroup.cs" />
-    <Compile Include="Models\Contact\ContactGroup.cs" />
+    <Compile Include="Models\Entities\ContactContactGroup.cs" />
+    <Compile Include="Models\Entities\ContactGroup.cs" />
     <Compile Include="Models\ContactGroupViewModel.cs" />
-    <Compile Include="Models\Contact\ContactInfo.cs" />
-    <Compile Include="Models\Contact\Contact.cs" />
+    <Compile Include="Models\Entities\ContactInfo.cs" />
+    <Compile Include="Models\Entities\Contact.cs" />
     <Compile Include="Models\ContactInfoViewModel.cs" />
     <Compile Include="Models\ContactViewModel.cs" />
-    <Compile Include="Models\Contact\InfoTypeEnum.cs" />
+    <Compile Include="Models\Entities\InfoTypeEnum.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
