Changed to new api uri.

--- a/DreamFactory.AddressBok/DreamFactory.AddressBook.csproj
+++ b/DreamFactory.AddressBok/DreamFactory.AddressBook.csproj
@@ -203,7 +203,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="App_Package\add_dotnet.dfpkg" />
-    <None Include="Properties\PublishProfiles\dfv204.pubxml" />
+    <None Include="Properties\PublishProfiles\df20.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
