--- a/DreamFactory/DreamFactory.csproj
+++ b/DreamFactory/DreamFactory.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\BaseApi.cs" />
     <Compile Include="Api\ISystemAppGroupApi.cs" />
     <Compile Include="Api\ISystemEmailTemplateApi.cs" />
     <Compile Include="Api\ISystemAppApi.cs" />
@@ -79,9 +80,8 @@
     <Compile Include="Api\IDatabaseApi.cs" />
     <Compile Include="Api\IEmailApi.cs" />
     <Compile Include="Api\Implementation\CustomSettingsApi.cs" />
-    <Compile Include="Api\Implementation\HttpAddressExtensions.cs" />
+    <Compile Include="Http\HttpAddressExtensions.cs" />
     <Compile Include="Api\Implementation\SystemApi.Admin.cs" />
-    <Compile Include="Api\Implementation\SystemApi.Single.cs" />
     <Compile Include="Api\Implementation\SystemApi.Event.cs" />
     <Compile Include="Api\Implementation\SystemApi.Delete.cs" />
     <Compile Include="Api\Implementation\SystemApi.Update.cs" />
