--- a/DreamFactoryNet.nuspec
+++ b/DreamFactoryNet.nuspec
@@ -2,14 +2,15 @@
 <package >
   <metadata>
     <id>DreamFactoryNet</id>
-    <version>2.0.0</version>
+    <version>2.0.2</version>
     <authors>DreamFactory</authors>
     <owners>DreamFactory.com</owners>
     <iconUrl>https://raw.githubusercontent.com/dreamfactorysoftware/.net-sdk/master/favicon_32x32.png</iconUrl>
     <licenseUrl>https://github.com/dreamfactorysoftware/dsp-core/blob/master/LICENSE.txt</licenseUrl>
     <projectUrl>https://github.com/dreamfactorysoftware/.net-sdk</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>.NET SDK for the DreamFactory REST API</description>
+    <title>.NET SDK for the DreamFactory REST API</title>
+    <description>This is the new .NET SDK for the DreamFactory REST API targeting version DreamFactory 2.0 that is currently in beta. For support of older DF instances use nuget package version 1.0.2.</description>
     <releaseNotes>Please visit dreamfactory.com</releaseNotes>
     <copyright>Copyright (c) DreamFactory 2015</copyright>
     <tags>DreamFactory REST .NET API</tags>
@@ -18,6 +19,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="DreamFactory\bin\Release\DreamFactory.dll" target="lib/portable-net45+win8+wp8+wpa81" />
+    <file src="DreamFactory\bin\Release\DreamFactory.dll" target="lib/portable-net45+netcore45+wpa81+wp8" />
   </files>
 </package>
