Added extracted package json files.

--- a/DreamFactory.AddressBook/DreamFactory.AddressBook.csproj
+++ b/DreamFactory.AddressBook/DreamFactory.AddressBook.csproj
@@ -203,6 +203,9 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="App_Package\add_dotnet.dfpkg" />
+    <Content Include="App_Package\data.json" />
+    <Content Include="App_Package\description.json" />
+    <Content Include="App_Package\schema.json" />
     <None Include="Properties\PublishProfiles\df20 - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\df20 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\df20.pubxml" />
