--- a/DreamFactoryNet.nuspec
+++ b/DreamFactoryNet.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>DreamFactoryNet</id>
-    <version>2.0.3</version>
+    <version>2.0.4</version>
     <authors>DreamFactory</authors>
     <owners>DreamFactory.com</owners>
     <iconUrl>https://raw.githubusercontent.com/dreamfactorysoftware/.net-sdk/master/favicon_32x32.png</iconUrl>
@@ -10,7 +10,7 @@
     <projectUrl>https://github.com/dreamfactorysoftware/.net-sdk</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <title>.NET SDK for the DreamFactory REST API</title>
-    <description>This is the new .NET SDK for the DreamFactory REST API targeting version DreamFactory 2.0 that is currently in beta. For support of older DF instances use nuget package version 1.0.2.</description>
+    <description>This is the new .NET SDK for the DreamFactory REST API targeting version DreamFactory 2.0 and above. For support of older DF instances use nuget package version 1.0.2.</description>
     <releaseNotes>Please visit dreamfactory.com</releaseNotes>
     <copyright>Copyright (c) DreamFactory 2015</copyright>
     <tags>DreamFactory REST .NET API</tags>
